manifest/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-grpc-nodeport
  labels:
    run: example-grpc
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"grpc":"HTTP2", "health": "HTTP2"}'
spec:
  type: NodePort
  ports:
  - name: grpc
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: health
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    run: example-grpc
